--- a/www/css/tabSlideBox.css
+++ b/www/css/tabSlideBox.css
@@ -19,18 +19,22 @@
 }
 
 .tabbed-slidebox .tsb-icons {
-  text-align: center;
+  text-align: right;
   margin: 0px 0;
   position: relative;
-  /*background-color:#fff;*/
+
 }
 
-.tabbed-slidebox .tsb-ic-wrp {
+.dis_tabbed-slidebox .tsb-ic-wrp {
   display: flex;
   position: relative;
   -webkit-transition: -webkit-transform 0.3s; /* For Safari 3.1 to 6.0 */
   -webkit-transform:translate3d(0,0,0);
   background-image:url('../img/DocApprove/background.png');
+}
+
+.tabbed-slidebox .tsb-ic-wrp {
+  
 }
 /*
 .tabbed-slidebox .tsb-icons a {
@@ -55,15 +59,13 @@
 .tabbed-slidebox .tsb-icons a {
   display: inline-block;
   width: 54px;
-  font-size: 2.5em;
-  color: #33cd5f;
-  -webkit-transform:translate3d(0,3px,0);
+  color: #0D47A1;
 }
 
+
 .tabbed-slidebox .tsb-icons a.active {
-  color: #f8f8f8;
-  font-size: 3.5em;
-  -webkit-transform:translate3d(0,0,0);
+  background:#2196F3;
+  color:#FFF;
 }
 
 .tabbed-slidebox .tabbed-slidebox {
@@ -72,10 +74,9 @@
   overflow: hidden;
 }
 
-.tabbed-slidebox .tsb-icons:after {
+.dis_tabbed-slidebox .tsb-icons:after {
   width: 0;
   height: 0;
-
   border-width: 0 1.4em 1.4em 1.4em;
   border-color: transparent transparent #0398dc transparent;
   position: absolute;
@@ -87,7 +88,7 @@
 }
 .tsb-hscroll.scroll-view{
   white-space: nowrap;
-  margin:0 auto;
+  margin:10px auto;
 }
 .tsb-hscroll.scroll-view .scroll-bar{
   visibility:hidden;
@@ -96,15 +97,25 @@
   -webkit-transition: -webkit-transform 0.3s; /* For Safari 3.1 to 6.0 */
 }
 
-.tabbed-slidebox .tsb-icons .scroll a{
+.dis_tabbed-slidebox .tsb-icons .scroll a{
   width:auto;
   font-size: 1.5em;
-  line-height: 1.5em;
+  line-height: 1.7em;
   text-decoration: none;
   margin: 0 15px;
   /*border-bottom: 3px solid transparent;*/
 }
-.tabbed-slidebox .tsb-icons .scroll a.active {
+
+.tabbed-slidebox .tsb-icons .scroll a{
+  width:auto;
+  text-decoration: none;
+  line-height: 1.5em;
+  margin: 0px 15px 10px 0px;
+  /*border-bottom: 3px solid transparent;*/
+}
+
+
+.dis_tabbed-slidebox .tsb-icons .scroll a.active {
   font-size: 1.6em;
   /*border-bottom: 3px solid #ccc;*/
 }
