--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -243,7 +243,7 @@ pele-button{
 /*----------------------------------------------------------------*/
 
 label.item-search{
-    background-color: #64B5F6;
+    background-color: #3F3F3D;
 }
 
 input.search-area{background-image: url("../img/DocApprove/search_box.png");
@@ -499,7 +499,22 @@ div.new-tab-slide-box .tabbed-slidebox {background:#fff}
   border-style:solid;
   border-color:#2196F3 transparent;
   /* reduce the damage in FF3.0 */
+  display:none;
+  width:0;
+}
+a.triangle-isosceles.active:after { 
+  content:"";
+  position:absolute;
+  bottom:-10px; /* value = - border-top-width - border-bottom-width */
+  right:10px; /* controls horizontal position */
+  border-width:10px 10px 0; /* vary these values to change the angle of the vertex */
+  border-style:solid;
+  border-color:#2196F3 transparent;
+  /* reduce the damage in FF3.0 */
   display:block;
   width:0;
 }
+a.triangle-isosceles.active { font-weight:bolder}
+
 table.mix-alpha-numeric-table tr td {padding-left:5px}
+div#main-apps-menu div.row-bottom {margin-top:15px}
