--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -22,6 +22,7 @@
       <div class="col"></div>
     </div>
     <!-- start ng-repeat -->
+	<div id="main-apps-menu">
     <div class="row row-bottom" ng-repeat="category in feeds_categories.menuItems">
       <div class="row" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)" ng-model="btn_class.on_release" on-touch="category.PUSH_FLAG = !category.PUSH_FLAG" on-release="category.PUSH_FLAG = !category.PUSH_FLAG">
         <div class="col col-10"></div>
@@ -38,6 +39,7 @@
 
         <div class="col col-10"></div>
 
+      </div>
       </div>
     </div>
     <!-- end start ng-repeat -->
