--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -525,3 +525,5 @@ a.triangle-isosceles.active { font-weight:bolder}
 
 table.mix-alpha-numeric-table tr td {padding-left:5px}
 div#main-apps-menu div.row-bottom {margin-top:15px}
+/* fix ios 10 title  proble*/
+.platform-ios .nav-bar-title .bar .title {margin-top:0 !important}
