WIP:shavit tasks

--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -550,3 +550,4 @@ div#main-apps-menu div.row-bottom {margin-top:15px}
 .pel-badge-positive {background-color:#387ef5 }
 .item-section {padding:6px}
 .no-border { border:0  !important}
+.item.action-history-item {line-height:30px}
