fix tab-slide-box white page

--- a/www/templates/dir.html
+++ b/www/templates/dir.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Dir">
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-positive">
       <div class="title" id="logo">
       </div>
     </div>
