--- a/www/templates/auth/forgot-password.html
+++ b/www/templates/auth/forgot-password.html
@@ -1,10 +1,10 @@
 <ion-view cache-view="false">
-  <ion-nav-buttons side="right"  >
+  <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-positive">
       <div class="title" id="logo">
       </div>
     </div>
