fix white page on tab-slide-box

--- a/www/templates/error.html
+++ b/www/templates/error.html
@@ -1,10 +1,10 @@
 <ion-view class="feed-entries-view " cache-view="false">
-  <ion-nav-buttons side="right"  >
+  <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-positive">
       <div class="title" id="logo">
         שגיאה
       </div>
@@ -14,11 +14,11 @@
   <ion-content class="pele-background">
     <div class="card">
       <div class="item item-body">
-    <p>
-    <strong>{{error}}</strong>
-    </p>
+        <p>
+          <strong>{{error}}</strong>
+        </p>
 
-  </div>
+      </div>
     </div>
   </ion-content>
 </ion-view>
