--- a/www/templates/settings/settingsList.html
+++ b/www/templates/settings/settingsList.html
@@ -1,19 +1,25 @@
-<ion-view  cache-view="false" hide-back-button="true">
+<ion-view cache-view="false" hide-back-button="true">
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
-  <ion-content class="pele-background">
-
-    <div class="pele-page-title pele-img-size pele-page-title-font">
-      <a class="description">הגדרות</a>
+  <ion-nav-title>
+    <div class="bar bar-header bar-positive">
+      <div class="title">הגדרות</div>
     </div>
+  </ion-nav-title>
+  <ion-content class="pele-background">
 
     <div class="list">
 
       <a class="item item-icon-right" ng-click="sendMail()">
         <i class="icon ion-email"></i>
         <p>שליחת נתונים לתחקור</p>
+      </a>
+      <a class="item item-icon-left item-icon-right" ng-click="clearLogFile()">
+      <i ng-show="checkClear" style="color:green" class="icon ion-checkmark"></i>
+        <p>ניקוי קובץ לוגים</p>
+        <i class="icon ion-trash-b"></i>
       </a>
       <!--
       <a class="item item-icon-right" ng-click="updateAppVersion()">
