WIP: generic file attachments handling

--- a/www/templates/error.html
+++ b/www/templates/error.html
@@ -26,11 +26,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col col-50"><button class="button  button-full item-icon-right">תפריט ראשי
+          <div class="col col-100"><button class="button  button-full item-icon-right">תפריט ראשי
             <i class="icon ion-navicon"></i>  </button></div>
-          <div class="col col-50"><button class="button button-gray button-full item-icon-right">
+        </div>
+        <div class="row">
+          <div class="col col-100"><button class="button button-gray button-full item-icon-right">
             <i class="icon ion-reply"></i>נסו שוב </button></div>
         </div>
       </div>
+    </div>
   </ion-content>
 </ion-view>
