--- a/www/templates/settings/settingsList.html
+++ b/www/templates/settings/settingsList.html
@@ -18,6 +18,11 @@
       </a>
       <a class="item item-icon-left item-icon-right" ng-click="clearLogFile()">
       <i ng-show="checkClear" style="color:green" class="icon ion-checkmark"></i>
+        <p>הצג שגיאות</p>
+        <i class="icon ion-trash-b"></i>
+      </a>
+      <a class="item item-icon-left item-icon-right" ng-click="clearLogFile()">
+      <i ng-show="checkClear" style="color:green" class="icon ion-checkmark"></i>
         <p>ניקוי קובץ לוגים</p>
         <i class="icon ion-trash-b"></i>
       </a>
