--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -593,3 +593,4 @@ img.spinner-svg {height:60px}
 .item.error-top i.icon  { font-size:130px;color:#FFF}
 .item.error-bottom { background :#FFF}
 .card.error .button { border:1px solid #CCC}
+.show_content_Y { color:blue;text-decoration: underline;}
