WIP : generic attachment reader

--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -594,3 +594,4 @@ img.spinner-svg {height:60px}
 .item.error-bottom { background :#FFF}
 .card.error .button { border:1px solid #CCC}
 .show_content_Y { color:blue;text-decoration: underline;}
+.attach_file {line-height:25px}
