--- a/www/templates/settings/settingsList.html
+++ b/www/templates/settings/settingsList.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false" hide-back-button="true">
+<ion-view name="dddddd" cache-view="false" hide-back-button="true">
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
@@ -14,18 +14,14 @@
 
       <a class="item item-icon-right" ng-click="sendMail()">
         <i class="icon ion-email"></i>
-        <p>שליחת נתונים לתחקור</p>
+        שליחת נתונים לתחקור
       </a>
-      <a class="item item-icon-left item-icon-right" ng-click="clearLogFile()">
-      <i ng-show="checkClear" style="color:green" class="icon ion-checkmark"></i>
-        <p>הצג שגיאות</p>
-        <i class="icon ion-trash-b"></i>
+
+      <a class="item  item-icon-right" ui-sref="app.dev">
+        <i class="icon ion-code-working"></i>
+      תפריט מפתחים
       </a>
-      <a class="item item-icon-left item-icon-right" ng-click="clearLogFile()">
-      <i ng-show="checkClear" style="color:green" class="icon ion-checkmark"></i>
-        <p>ניקוי קובץ לוגים</p>
-        <i class="icon ion-trash-b"></i>
-      </a>
+
       <!--
       <a class="item item-icon-right" ng-click="updateAppVersion()">
         <i class="icon ion-android-download"></i>
@@ -34,7 +30,7 @@
 	  -->
       <a class="item item-icon-right" ng-click="forwardTo('app.appProfile')">
         <i class="icon ion-help-buoy"></i>
-        <p>אודות אפליקציה</p>
+        אודות אפליקציה
       </a>
 
     </div>
