--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -595,3 +595,4 @@ img.spinner-svg {height:60px}
 .card.error .button { border:1px solid #CCC}
 .show_content_Y { color:blue;text-decoration: underline;}
 .attach_file {line-height:25px}
+.alert { color:red}
