WIP:improve search filter on docsGroup ( TSK )

--- a/www/templates/devmenu.html
+++ b/www/templates/devmenu.html
@@ -24,6 +24,10 @@
         <i class="icon ion-bug"></i>
           מחסנית שגיאות
       </a>
+      <a class="item  item-icon-right" ui-sref="app.dev.log">
+        <i class="icon ion-bug"></i>
+          הצג קובץ לוג
+        </a>
 
       <!--
       <a class="item item-icon-right" ng-click="updateAppVersion()">
