--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -506,7 +506,7 @@ h2.pele_rtl{
 }
 
 .apps-front-menu {padding: 0 10%}
-.apps-front-menu .menu-item {margin-top:15px}
+.apps-front-menu .menu-item {margin-top:3px}
 .apps-front-menu button { height:70px;;position: relative;background-color: #E3F2FD;border-radius: 6px;font-weight:bolder;min-height:70px;}
 .apps-front-menu button.activated {border-radius: 6px;background:#BBDEFB}
 .apps-front-menu .badge.badge-positive {margin-right:10px}
@@ -582,12 +582,13 @@ div#main-apps-menu div.row-bottom {margin-top:15px}
     margin-right:5px;
 }
 .pel-badge-positive {background-color:#387ef5 }
-.item-section {padding:6px}
+.item-section {padding-top:8px;padding-right:8px;padding-bottom: 12px}
+.item-section {clear:both !important;}
 .no-border { border:0  !important}
 .item.action-history-item {line-height:30px}
 div.loading-container div.loading {background-color: #2980B9 !important;}
 img.spinner-svg {height:60px}
-.item.item-info { padding:10px}
+.item.item-info { padding:5px}
 .platform-android .action-sheet-cancel {
     display: block !important;
 }
