--- a/www/templates/settings/settingsList.html
+++ b/www/templates/settings/settingsList.html
@@ -17,7 +17,7 @@
         שליחת נתונים לתחקור
       </a>
 
-      <a class="item  item-icon-right" ui-sref="app.dev">
+      <a ng-show="false" class="item  item-icon-right" ui-sref="app.dev">
         <i class="icon ion-code-working"></i>
       תפריט מפתחים
       </a>
