add scan print app

--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -582,7 +582,7 @@ div#main-apps-menu div.row-bottom {margin-top:15px}
     margin-right:5px;
 }
 .pel-badge-positive {background-color:#387ef5 }
-.item-section {padding-top:8px;padding-right:8px;padding-bottom: 12px}
+.item-section {padding-top:8px;padding-right:8px;padding-bottom: 8px}
 .item-section {clear:both !important;}
 .no-border { border:0  !important}
 .item.action-history-item {line-height:30px}
@@ -597,7 +597,7 @@ img.spinner-svg {height:60px}
 .item.error-top  {background :#e95350}
 .item.error-top i.icon  { font-size:130px;color:#FFF}
 .item.error-bottom { background :#FFF}
-.card.error .button { border:1px solid #CCC}
+.card.error .button { border:1px solid #CCC;margin:2px}
 .show_content_Y { color:blue;text-decoration:none;}
 .attach_file {line-height:25px}
 .alert { color:red}
