--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -1,12 +1,13 @@
-<ion-view class="feeds-categories-view" cache-view="false" hide-back-button="true">
+<ion-view cache-view="false">
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-positive">
-      <h1 class="title">בחירת אפליקציה</h1>
-    </div>
+    <ion-header-bar align-title="center" class="bar-positive">
+      <h1 class="title">תפריט יישומים</h1>
+      </ion-header>
+
   </ion-nav-title>
 
   <ion-content class="pele-background">
