--- a/www/templates/devmenu.html
+++ b/www/templates/devmenu.html
@@ -5,7 +5,7 @@
   </ion-nav-buttons>
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
-      <div class="title">הגדרות</div>
+      <div class="title"> תפריט מפתחים </div>
     </div>
   </ion-nav-title>
   <ion-content class="pele-background">
@@ -14,6 +14,11 @@
       <a class="item item-icon-left item-icon-right" ng-click="clearLogFile()">
       <i ng-show="checkClear" style="color:green" class="icon ion-checkmark"></i>
       ניקוי קובץ לוגים
+        <i class="icon ion-trash-b"></i>
+      </a>
+      <a class="item item-icon-left item-icon-right" ng-click="clearStorage()">
+      <i ng-show="storageCheckClear" style="color:green" class="icon ion-checkmark"></i>
+        מחיקת זיכרון מטמון
         <i class="icon ion-trash-b"></i>
       </a>
       <a class="item  item-icon-right" ui-sref="app.dev.attach">
@@ -27,14 +32,7 @@
       <a class="item  item-icon-right" ui-sref="app.dev.log">
         <i class="icon ion-bug"></i>
           הצג קובץ לוג
-        </a>
-
-      <!--
-      <a class="item item-icon-right" ng-click="updateAppVersion()">
-        <i class="icon ion-android-download"></i>
-        <p>עדכון גרסה</p>
       </a>
-	  -->
       <a class="item item-icon-right" ui-sref="app.p1_appsLists">
         <i class="icon ion-help-buoy"></i>
         חזרה לאפליקציה
