--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -5,7 +5,7 @@
   </ion-nav-buttons>
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
-      <h1 class="title">בחירת אפליקציה</h1>
+      <h1 class="title">תפריט יישומים</h1>
     </div>
   </ion-nav-title>
 
