fix bugs + find and highlight

--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -637,6 +637,9 @@ img.spinner-svg {height:60px}
 }
 .bar.app-top-bar { background-color: #0160a0 !important}
 
+.pel_icon.icon {
+    font-size: 1.3em;
+}
 .item-icon-right .pel_icon.icon {
     right: 4px;
     font-size: 1.3em;
@@ -646,4 +649,6 @@ img.spinner-svg {height:60px}
     left: 4px;
     font-size: 1.3em;
 }
-img.doc-redirect {height:35px}
+img.doc-redirect {height:30px}
+ .highlighted { background: yellow ; font-weight: bold}
+.list.list-inset.text-finder {margin-top:0 ; margin-bottom: 0}
