--- a/www/templates/settings/settingsList.html
+++ b/www/templates/settings/settingsList.html
@@ -8,7 +8,7 @@
       <div class="title">הגדרות</div>
     </div>
   </ion-nav-title>
-  <ion-content class="pele-background">
+  <ion-content class="pele-background" scroll="false">
 
     <div class="list">
 
@@ -17,9 +17,10 @@
         שליחת נתונים לתחקור
       </a>
 
-      <a ng-show="false" class="item  item-icon-right" ui-sref="app.dev">
+      <a ng-show="env!='PD'" class="item  item-icon-right" ui-sref="app.dev">
         <i class="icon ion-code-working"></i>
       תפריט מפתחים
+      <span><strong class="alert">(סביבה : {{env}})</strong></span>
       </a>
 
       <!--
