--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -509,14 +509,15 @@ h2.pele_rtl{
 
 .apps-front-menu {padding: 0 10%}
 .apps-front-menu .menu-item {margin-top:3px}
-.apps-front-menu button { height:70px;;position: relative;background-color: #E3F2FD;border-radius: 6px;font-weight:bolder;min-height:70px;}
+.apps-front-menu button { height:70px;position: relative;background-color: #E3F2FD;border-radius: 6px;font-weight:bolder;min-height:70px;}
+.apps-front-menu .menu-item.reduce button {min-height:60px;height:60px}
 .apps-front-menu button.activated {border-radius: 6px;background:#BBDEFB}
 .apps-front-menu .badge.badge-positive {margin-right:10px}
 .apps-front-menu .menu-item button img {  position: absolute; height:50px;min-height:50px;
             top: 10px;
             right:10px
             }
-
+.apps-front-menu .menu-item.reduce  button img { height:40px;min-height:40px;}
 
 label.item-search-new {;background: #c4c6c7}
 label.item-search-new  {border:1px solid #CCC;background:White;border-radius: 4px;margin:10px !important}
@@ -710,8 +711,13 @@ div.hide-search {height:0px;min-height: 0px;display:none}
 }
 div.short_text { font-size:12px}
 
-table.init_lines_table {margin-bottom: 6px}
+table.init_lines_table {margin-bottom: 6px;width:100%;}
+table.init_lines_table th , table.init_lines_table td {padding-top:3px;padding-bottom: 3px}
 table.init_lines_table thead {background: #f4f4f4;border:1px solid #999999}
-table.init_lines_table .label {padding-right:5px;}
+table.init_lines_table thead .info {padding-right:8px}
+
+table.init_lines_table .label {padding-right:5px;white-space:nowrap}
+table.init_lines_table .info {padding-right:5px;width: 99%;padding}
+
 table.init_lines_table thead .label {font-weight: bold}
 table.init_lines_table {border:1px solid #CCC}
